All data for Graz and Stuttgart with latitudes and longitudes

--- a/Graz-vs-Stuttgart-IBM-Data-Science-Capstone-.ipynb
+++ b/Graz-vs-Stuttgart-IBM-Data-Science-Capstone-.ipynb
@@ -1687,7 +1687,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stuttgart = stuttgart.join(stuttgart_plz.set_index('Borough'), on='Borough')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stuttgart-Mitte, Stuttgart, Germany\n",
+      "Stuttgart-Nord, Stuttgart, Germany\n",
+      "Stuttgart-Ost, Stuttgart, Germany\n",
+      "Stuttgart-Süd, Stuttgart, Germany\n",
+      "Stuttgart-West, Stuttgart, Germany\n",
+      "Bad Cannstatt, Stuttgart, Germany\n",
+      "Birkach, Stuttgart, Germany\n",
+      "Botnang, Stuttgart, Germany\n",
+      "Degerloch, Stuttgart, Germany\n",
+      "Feuerbach, Stuttgart, Germany\n",
+      "Hedelfingen, Stuttgart, Germany\n",
+      "Möhringen, Stuttgart, Germany\n",
+      "Mühlhausen, Stuttgart, Germany\n",
+      "Münster, Stuttgart, Germany\n",
+      "Obertürkheim, Stuttgart, Germany\n",
+      "Plieningen, Stuttgart, Germany\n",
+      "Sillenbuch, Stuttgart, Germany\n",
+      "Stammheim, Stuttgart, Germany\n",
+      "Untertürkheim, Stuttgart, Germany\n",
+      "Vaihingen, Stuttgart, Germany\n",
+      "Wangen, Stuttgart, Germany\n",
+      "Weilimdorf, Stuttgart, Germany\n",
+      "Zuffenhausen, Stuttgart, Germany\n"
+     ]
+    }
+   ],
+   "source": [
+    "latitude =[]\n",
+    "longitude = []\n",
+    "\n",
+    "for bor in stuttgart['Borough']:\n",
+    "    \n",
+    "    print(bor + \", Stuttgart, Germany\")\n",
+    "    location = locator.geocode(bor + \", Stuttgart, Germany\")\n",
+    "    if location!=None:\n",
+    "        latitude.append(location.latitude)\n",
+    "        longitude.append(location.longitude)\n",
+    "    else:\n",
+    "        latitude.append(None)\n",
+    "        longitude.append(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stuttgart['Latitude'] = latitude\n",
+    "stuttgart['Longitude'] = longitude"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1714,6 +1784,8 @@
        "      <th>Borough</th>\n",
        "      <th>Population</th>\n",
        "      <th>Area [km2]</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
        "      <th>Postleitzahl</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1723,6 +1795,8 @@
        "      <td>Stuttgart-Mitte</td>\n",
        "      <td>23956</td>\n",
        "      <td>3.808</td>\n",
+       "      <td>48.775900</td>\n",
+       "      <td>9.179800</td>\n",
        "      <td>70173, 70174, 70176, 70178, 70180, 70182, 7018...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1730,6 +1804,8 @@
        "      <td>Stuttgart-Nord</td>\n",
        "      <td>27629</td>\n",
        "      <td>6.815</td>\n",
+       "      <td>48.796661</td>\n",
+       "      <td>9.176252</td>\n",
        "      <td>70174, 70191, 70192, 70193</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1737,6 +1813,8 @@
        "      <td>Stuttgart-Ost</td>\n",
        "      <td>48730</td>\n",
        "      <td>9.035</td>\n",
+       "      <td>48.776972</td>\n",
+       "      <td>9.207365</td>\n",
        "      <td>70184, 70186, 70188, 70190, 70327</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1744,6 +1822,8 @@
        "      <td>Stuttgart-Süd</td>\n",
        "      <td>44050</td>\n",
        "      <td>9.586</td>\n",
+       "      <td>48.753021</td>\n",
+       "      <td>9.132492</td>\n",
        "      <td>70178, 70180, 70184, 70199</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1751,6 +1831,8 @@
        "      <td>Stuttgart-West</td>\n",
        "      <td>52668</td>\n",
        "      <td>18.643</td>\n",
+       "      <td>48.777659</td>\n",
+       "      <td>9.151351</td>\n",
        "      <td>70174, 70176, 70178, 70193, 70197</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1758,6 +1840,8 @@
        "      <td>Bad Cannstatt</td>\n",
        "      <td>71285</td>\n",
        "      <td>15.713</td>\n",
+       "      <td>48.804883</td>\n",
+       "      <td>9.214680</td>\n",
        "      <td>70191, 70372, 70374, 70376, 70378</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1765,6 +1849,8 @@
        "      <td>Birkach</td>\n",
        "      <td>7149</td>\n",
        "      <td>3.089</td>\n",
+       "      <td>48.728574</td>\n",
+       "      <td>9.203406</td>\n",
        "      <td>70599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1772,6 +1858,8 @@
        "      <td>Botnang</td>\n",
        "      <td>13165</td>\n",
        "      <td>2.135</td>\n",
+       "      <td>48.778495</td>\n",
+       "      <td>9.129532</td>\n",
        "      <td>70195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1779,6 +1867,8 @@
        "      <td>Degerloch</td>\n",
        "      <td>16686</td>\n",
        "      <td>8.021</td>\n",
+       "      <td>48.749597</td>\n",
+       "      <td>9.170345</td>\n",
        "      <td>70597</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1786,6 +1876,8 @@
        "      <td>Feuerbach</td>\n",
        "      <td>30417</td>\n",
        "      <td>11.554</td>\n",
+       "      <td>48.812305</td>\n",
+       "      <td>9.159031</td>\n",
        "      <td>70192, 70469, 70499</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1793,6 +1885,8 @@
        "      <td>Hedelfingen</td>\n",
        "      <td>10296</td>\n",
        "      <td>7.324</td>\n",
+       "      <td>48.756436</td>\n",
+       "      <td>9.252665</td>\n",
        "      <td>70327, 70329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1800,6 +1894,8 @@
        "      <td>Möhringen</td>\n",
        "      <td>33094</td>\n",
        "      <td>15.044</td>\n",
+       "      <td>48.727816</td>\n",
+       "      <td>9.147792</td>\n",
        "      <td>70565, 70567, 70597</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1807,6 +1903,8 @@
        "      <td>Mühlhausen</td>\n",
        "      <td>25675</td>\n",
        "      <td>9.120</td>\n",
+       "      <td>48.845610</td>\n",
+       "      <td>9.226179</td>\n",
        "      <td>70378</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1814,6 +1912,8 @@
        "      <td>Münster</td>\n",
        "      <td>6796</td>\n",
        "      <td>2.210</td>\n",
+       "      <td>48.821296</td>\n",
+       "      <td>9.220002</td>\n",
        "      <td>70376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1821,6 +1921,8 @@
        "      <td>Obertürkheim</td>\n",
        "      <td>8648</td>\n",
        "      <td>5.462</td>\n",
+       "      <td>48.764789</td>\n",
+       "      <td>9.268515</td>\n",
        "      <td>70329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1828,6 +1930,8 @@
        "      <td>Plieningen</td>\n",
        "      <td>13397</td>\n",
        "      <td>13.075</td>\n",
+       "      <td>48.711395</td>\n",
+       "      <td>9.198991</td>\n",
        "      <td>70599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1835,6 +1939,8 @@
        "      <td>Sillenbuch</td>\n",
        "      <td>24067</td>\n",
        "      <td>7.457</td>\n",
+       "      <td>48.742184</td>\n",
+       "      <td>9.222216</td>\n",
        "      <td>70619</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1842,6 +1948,8 @@
        "      <td>Stammheim</td>\n",
        "      <td>12502</td>\n",
        "      <td>4.334</td>\n",
+       "      <td>48.849798</td>\n",
+       "      <td>9.157305</td>\n",
        "      <td>70435, 70439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1849,6 +1957,8 @@
        "      <td>Untertürkheim</td>\n",
        "      <td>16694</td>\n",
        "      <td>6.055</td>\n",
+       "      <td>48.780200</td>\n",
+       "      <td>9.250900</td>\n",
        "      <td>70327</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1856,6 +1966,8 @@
        "      <td>Vaihingen</td>\n",
        "      <td>48835</td>\n",
        "      <td>20.893</td>\n",
+       "      <td>48.734429</td>\n",
+       "      <td>9.088648</td>\n",
        "      <td>70563, 70565, 70569</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1863,6 +1975,8 @@
        "      <td>Wangen</td>\n",
        "      <td>9255</td>\n",
        "      <td>3.426</td>\n",
+       "      <td>48.771985</td>\n",
+       "      <td>9.244927</td>\n",
        "      <td>70327</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1870,6 +1984,8 @@
        "      <td>Weilimdorf</td>\n",
        "      <td>31873</td>\n",
        "      <td>12.585</td>\n",
+       "      <td>48.815276</td>\n",
+       "      <td>9.112444</td>\n",
        "      <td>70499</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1877,6 +1993,8 @@
        "      <td>Zuffenhausen</td>\n",
        "      <td>38676</td>\n",
        "      <td>11.963</td>\n",
+       "      <td>48.831299</td>\n",
+       "      <td>9.167440</td>\n",
        "      <td>70376, 70435, 70437, 70439, 70469</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1884,30 +2002,30 @@
        "</div>"
       ],
       "text/plain": [
-       "            Borough  Population  Area [km2]  \\\n",
-       "0   Stuttgart-Mitte       23956       3.808   \n",
-       "1    Stuttgart-Nord       27629       6.815   \n",
-       "2     Stuttgart-Ost       48730       9.035   \n",
-       "3     Stuttgart-Süd       44050       9.586   \n",
-       "4    Stuttgart-West       52668      18.643   \n",
-       "5     Bad Cannstatt       71285      15.713   \n",
-       "6           Birkach        7149       3.089   \n",
-       "7           Botnang       13165       2.135   \n",
-       "8         Degerloch       16686       8.021   \n",
-       "9         Feuerbach       30417      11.554   \n",
-       "10      Hedelfingen       10296       7.324   \n",
-       "11        Möhringen       33094      15.044   \n",
-       "12       Mühlhausen       25675       9.120   \n",
-       "13          Münster        6796       2.210   \n",
-       "14     Obertürkheim        8648       5.462   \n",
-       "15       Plieningen       13397      13.075   \n",
-       "16       Sillenbuch       24067       7.457   \n",
-       "17        Stammheim       12502       4.334   \n",
-       "18    Untertürkheim       16694       6.055   \n",
-       "19        Vaihingen       48835      20.893   \n",
-       "20           Wangen        9255       3.426   \n",
-       "21       Weilimdorf       31873      12.585   \n",
-       "22     Zuffenhausen       38676      11.963   \n",
+       "            Borough  Population  Area [km2]   Latitude  Longitude  \\\n",
+       "0   Stuttgart-Mitte       23956       3.808  48.775900   9.179800   \n",
+       "1    Stuttgart-Nord       27629       6.815  48.796661   9.176252   \n",
+       "2     Stuttgart-Ost       48730       9.035  48.776972   9.207365   \n",
+       "3     Stuttgart-Süd       44050       9.586  48.753021   9.132492   \n",
+       "4    Stuttgart-West       52668      18.643  48.777659   9.151351   \n",
+       "5     Bad Cannstatt       71285      15.713  48.804883   9.214680   \n",
+       "6           Birkach        7149       3.089  48.728574   9.203406   \n",
+       "7           Botnang       13165       2.135  48.778495   9.129532   \n",
+       "8         Degerloch       16686       8.021  48.749597   9.170345   \n",
+       "9         Feuerbach       30417      11.554  48.812305   9.159031   \n",
+       "10      Hedelfingen       10296       7.324  48.756436   9.252665   \n",
+       "11        Möhringen       33094      15.044  48.727816   9.147792   \n",
+       "12       Mühlhausen       25675       9.120  48.845610   9.226179   \n",
+       "13          Münster        6796       2.210  48.821296   9.220002   \n",
+       "14     Obertürkheim        8648       5.462  48.764789   9.268515   \n",
+       "15       Plieningen       13397      13.075  48.711395   9.198991   \n",
+       "16       Sillenbuch       24067       7.457  48.742184   9.222216   \n",
+       "17        Stammheim       12502       4.334  48.849798   9.157305   \n",
+       "18    Untertürkheim       16694       6.055  48.780200   9.250900   \n",
+       "19        Vaihingen       48835      20.893  48.734429   9.088648   \n",
+       "20           Wangen        9255       3.426  48.771985   9.244927   \n",
+       "21       Weilimdorf       31873      12.585  48.815276   9.112444   \n",
+       "22     Zuffenhausen       38676      11.963  48.831299   9.167440   \n",
        "\n",
        "                                         Postleitzahl  \n",
        "0   70173, 70174, 70176, 70178, 70180, 70182, 7018...  \n",
@@ -1935,13 +2053,13 @@
        "22                  70376, 70435, 70437, 70439, 70469  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stuttgart.join(stuttgart_plz.set_index('Borough'), on='Borough')"
+    "stuttgart"
    ]
   },
   {
