Finale version with introduction

--- a/Graz-vs-Stuttgart-IBM-Data-Science-Capstone-.ipynb
+++ b/Graz-vs-Stuttgart-IBM-Data-Science-Capstone-.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's try to explore similarities and differences between these two cities. Why are these two cities interesting? It's because I lived in both of them and now I'm curious to see are they similar. The first similarity is that the first language in both of these is german, but that's not important here. The city boroughs are going to be explored and analyzed based on the Foursquare app venue search. I will cluster separately both cities based on the top 10 venues and then try to find out what boroughs in Stuttgart and Graz belong to the same cluster based on the top 10 venues. And find a conclusion if I'm going to move from Graz to Stuttgart, where I can find in Stuttgart similar borough."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Collection and Data Cleaning"
    ]
   },
@@ -176,9 +183,7 @@
     "area_num = []\n",
     "for plz in gplz_list:\n",
     "    plz_city.append(plz[0])\n",
-    "    area_num.append(plz[1])\n",
-    "plz_city\n",
-    "area_num"
+    "    area_num.append(plz[1])"
    ]
   },
   {
@@ -237,8 +242,7 @@
    "source": [
     "#geting the area of borouhg\n",
     "for are in area_num:\n",
-    "    area.append(float(are[1].replace(\",\",\".\")))\n",
-    "area"
+    "    area.append(float(are[1].replace(\",\",\".\")))"
    ]
   },
   {
@@ -276,8 +280,7 @@
    "source": [
     "#geting the population of borough\n",
     "for pop in area_num:\n",
-    "    population.append(int(pop[3].replace(\".\",\"\")))\n",
-    "population"
+    "    population.append(int(pop[3].replace(\".\",\"\")))"
    ]
   },
   {
@@ -1475,216 +1478,6 @@
    ],
    "source": [
     "stuttgart_plz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Borough</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Area [km2]</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Stuttgart-Mitte</td>\n",
-       "      <td>23956</td>\n",
-       "      <td>3.808</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Stuttgart-Nord</td>\n",
-       "      <td>27629</td>\n",
-       "      <td>6.815</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Stuttgart-Ost</td>\n",
-       "      <td>48730</td>\n",
-       "      <td>9.035</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Stuttgart-Süd</td>\n",
-       "      <td>44050</td>\n",
-       "      <td>9.586</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Stuttgart-West</td>\n",
-       "      <td>52668</td>\n",
-       "      <td>18.643</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Bad Cannstatt</td>\n",
-       "      <td>71285</td>\n",
-       "      <td>15.713</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Birkach</td>\n",
-       "      <td>7149</td>\n",
-       "      <td>3.089</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Botnang</td>\n",
-       "      <td>13165</td>\n",
-       "      <td>2.135</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Degerloch</td>\n",
-       "      <td>16686</td>\n",
-       "      <td>8.021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Feuerbach</td>\n",
-       "      <td>30417</td>\n",
-       "      <td>11.554</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Hedelfingen</td>\n",
-       "      <td>10296</td>\n",
-       "      <td>7.324</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Möhringen</td>\n",
-       "      <td>33094</td>\n",
-       "      <td>15.044</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Mühlhausen</td>\n",
-       "      <td>25675</td>\n",
-       "      <td>9.120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Münster</td>\n",
-       "      <td>6796</td>\n",
-       "      <td>2.210</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Obertürkheim</td>\n",
-       "      <td>8648</td>\n",
-       "      <td>5.462</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Plieningen</td>\n",
-       "      <td>13397</td>\n",
-       "      <td>13.075</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Sillenbuch</td>\n",
-       "      <td>24067</td>\n",
-       "      <td>7.457</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Stammheim</td>\n",
-       "      <td>12502</td>\n",
-       "      <td>4.334</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Untertürkheim</td>\n",
-       "      <td>16694</td>\n",
-       "      <td>6.055</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Vaihingen</td>\n",
-       "      <td>48835</td>\n",
-       "      <td>20.893</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Wangen</td>\n",
-       "      <td>9255</td>\n",
-       "      <td>3.426</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Weilimdorf</td>\n",
-       "      <td>31873</td>\n",
-       "      <td>12.585</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Zuffenhausen</td>\n",
-       "      <td>38676</td>\n",
-       "      <td>11.963</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Borough  Population  Area [km2]\n",
-       "0   Stuttgart-Mitte       23956       3.808\n",
-       "1    Stuttgart-Nord       27629       6.815\n",
-       "2     Stuttgart-Ost       48730       9.035\n",
-       "3     Stuttgart-Süd       44050       9.586\n",
-       "4    Stuttgart-West       52668      18.643\n",
-       "5     Bad Cannstatt       71285      15.713\n",
-       "6           Birkach        7149       3.089\n",
-       "7           Botnang       13165       2.135\n",
-       "8         Degerloch       16686       8.021\n",
-       "9         Feuerbach       30417      11.554\n",
-       "10      Hedelfingen       10296       7.324\n",
-       "11        Möhringen       33094      15.044\n",
-       "12       Mühlhausen       25675       9.120\n",
-       "13          Münster        6796       2.210\n",
-       "14     Obertürkheim        8648       5.462\n",
-       "15       Plieningen       13397      13.075\n",
-       "16       Sillenbuch       24067       7.457\n",
-       "17        Stammheim       12502       4.334\n",
-       "18    Untertürkheim       16694       6.055\n",
-       "19        Vaihingen       48835      20.893\n",
-       "20           Wangen        9255       3.426\n",
-       "21       Weilimdorf       31873      12.585\n",
-       "22     Zuffenhausen       38676      11.963"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stuttgart"
    ]
   },
   {
