Trusted Notebook and Intro added

--- a/Graz-vs-Stuttgart-IBM-Data-Science-Capstone-.ipynb
+++ b/Graz-vs-Stuttgart-IBM-Data-Science-Capstone-.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's try to explore similarities and differences between these two cities. Why are these two cities interesting? It's because I lived in both of them and now I'm curious to see are they similar. The first similarity is that the first language in both of these is german, but that's not important here. The city boroughs are going to be explored and analyzed based on the Foursquare app venue search. I will cluster separately both cities based on the top 10 venues and then try to find out what boroughs in Stuttgart and Graz belong to the same cluster based on the top 10 venues. And find a conclusion if I'm going to move from Graz to Stuttgart, where I can find in Stuttgart similar borough."
    ]
   },
